<resources>
    <string name="app_name">ManIT</string>
    <string name="newScan">New Scan</string>
    <string name="newScan_text">Switches to activity to enter a new scan</string>
    <string name="previousScan_text">Shows the last device scanned</string>
    <string name="wifiScan">to wifi scan activity</string>
    <string name="MAC">"MAC: "</string>
    <string name="newWAP_text">New WIFI Scan</string>
    <string name="lat">Latitude</string>
    <string name="lon">Longitude</string>
    <string name="addWAP">Add WAP</string>
    <string name="validate_text">Save for Validation</string>
    <string name="skip_text">Skip</string>
    <string name="number">number</string>
    <string name="inventory">Physical Inventory</string>
    <string name="tempOrg1">Microsoft</string>
    <string name="tempOrg2">Google</string>
    <string name="tempOrg3">Oracle</string>
    <string name="OrgsTitle">Organizations</string>
    <string name="ListsTitle">Lists</string>
    <string name="tempList1">Meeting Room 26A</string>
    <string name="new_scan">Scan</string>
    <string name="save">Save WAP</string>
    <string name="wap_name">WAP Name: </string>
    <string name="enter_name">Enter Name</string>
    <string name="wifi_scan">WiFi Scan</string>
    <string name="save_wap">Save WAP</string>
    <string name="ssid">SSID: </string>
    <string name="mac">MAC Address: </string>
    <string name="ip">IP Address: </string>
    <string name="signalstrength">Signal Strength: </string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_wi_fi_maps">Map</string>
    <string name="title_activity_w_a_p_details">WAPDetails</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
</resources>