<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".new_scan">

    <TextView
        android:id="@+id/newWAP"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newWAP_text"
        tools:layout_editor_absoluteX="86dp"
        tools:layout_editor_absoluteY="61dp"
        android:layout_gravity="center"
        android:textSize="10pt"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/MAC_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/MAC"
            tools:layout_editor_absoluteX="92dp"
            tools:layout_editor_absoluteY="105dp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lat_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lat"
            tools:layout_editor_absoluteX="111dp"
            tools:layout_editor_absoluteY="148dp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/number"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/lon_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lon"
            tools:layout_editor_absoluteX="129dp"
            tools:layout_editor_absoluteY="186dp" />
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/number"/>
    </LinearLayout>

    <Button
        android:id="@+id/add_WAP_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/addWAP"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="355dp"
        android:layout_gravity="center"
        android:onClick="clicked_add_WAP"/>

    <Button
        android:id="@+id/validate_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/validate_text"
        tools:layout_editor_absoluteX="71dp"
        tools:layout_editor_absoluteY="432dp"
        android:layout_gravity="center"
        android:onClick="clicked_validate"/>

    <Button
        android:id="@+id/skip_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/skip_text"
        tools:layout_editor_absoluteX="114dp"
        tools:layout_editor_absoluteY="494dp"
        android:layout_gravity="center"
        android:onClick="clicked_skip"/>
</LinearLayout>